build.gradle:  suppress System::load() warnings