@@ -415,6 +415,7 @@ tasks.withType(JavaExec).configureEach { // Java runtime options:
     classpath sourceSets.test.runtimeClasspath
     dependsOn('assemble')
     enableAssertions = true
+    jvmArgs("--enable-native-access=ALL-UNNAMED") // suppress System::load() warning
 }
 test.dependsOn('assemble')
 
